[metadata]
name = moval
version = attr: moval.__version__
author = Zeju Li
author_email = lizeju8@gmail.com
description = Model evaluation without manual labels
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.md
license_file_type = text/markdown
url = https://github.com/ZerojumpLine/MOVAL
project_urls =
    Bug Tracker = https://github.com/ZerojumpLine/MOVAL/issues
classifiers =
    Development Status :: 3 - Alpha
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: Free for non-commercial use

[options]
python_requires = >=3.8
packages = find:
install_requires =
    scikit-learn>=1.3.0
    scipy>=1.8.0
    pytest
    gdown
    pandas
    nibabel
